--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test:watch": "jest -c test/jest.config.js --watch",
     "test:coverage": "jest -c test/jest.config.js --coverage",
     "export": "cross-env NODE_ENV=production next build && next export",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
+    "gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.11",
