--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 
 # production
 /build
-/dist
+dist/*
 
 # misc
 .DS_Store
@@ -30,6 +30,8 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+dist
 
 # vercel
 .vercel
